created frequently bought section

--- a/productOpen.html
+++ b/productOpen.html
@@ -1312,17 +1312,119 @@
     <section class="frequently-bought-section">
         <div class="container">
             <h2 class="text-center frequently-bought-title">FREQUENTLY BOUGHT WITH…</h2>
-            <div class="frequently-bought-slider splide" role="group" aria-label="Splide Basic HTML Example">
+            <div class="mx-auto frequently-bought-slider splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="primary-slider-arrows splide__arrows splide__arrows--ltr">
+                    <button class="splide__arrow splide__arrow--prev" type="button" aria-label="Previous slide" aria-controls="splide03-track">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.732 21.742">
+                            <path id="Path_16024" data-name="Path 16024" d="M6.655.013,3.048,6.062,0,11.2,3.049,16.3l3.262,5.454h6.075L6.1,11.2,12.732.013Z" transform="translate(12.732 21.755) rotate(180)" fill="currentColor"></path>
+                        </svg>
+                    </button>
+                    <button class="splide__arrow splide__arrow--next" type="button" aria-label="Go to first slide" aria-controls="splide03-track">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox=" 0 0 12.732 21.742">
+                            <path id="Path_16024" data-name="Path 16024" d="M6.655.013,3.048,6.062,0,11.2,3.049,16.3l3.262,5.454h6.075L6.1,11.2,12.732.013Z" transform="translate(12.732 21.755) rotate(180)" fill="currentColor"></path>
+                        </svg>
+                    </button>
+                </div>
                 <div class="frequently-bought-track splide__track">
                     <ul class="frequently-bought-list splide__list">
                         <li class="frequently-bought-slide splide__slide">
                             <div class="frequently-bought-item">
-                                <div class="frequently-bought-img-content">
-                                    <img src="" alt="">
+                                <div class="frequently-bought-wrapper">
+                                    <img class="img-cover frequently-bought-img" src="assets/images/sections/frequently-bought-section/frequently-bought-img-01.png" alt="frequently-bought-img">
+                                    <div class="frequently-bought-content">
+                                        <h5 class="font-15 font-black title">OILFILTER SERVICEKIT
+                                            <span class="display-block">690 12-14</span>
+                                        </h5>
+                                        <h6 class="frequently-bought-price">£52.50</h6>
+                                    </div>
                                 </div>
-                                <div class="frequently-bought-content">
-
+                                <a class="btn primary-btn frequently-bought-btn" href="javascript:void(0);">
+                                    <span>ADD TO BASKET</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="frequently-bought-slide splide__slide">
+                            <div class="frequently-bought-item">
+                                <div class="frequently-bought-wrapper">
+                                    <img class="img-cover frequently-bought-img" src="assets/images/sections/frequently-bought-section/frequently-bought-img-02.png" alt="frequently-bought-img">
+                                    <div class="frequently-bought-content">
+                                        <h5 class="font-15 font-black title">FOX RACING 180
+                                            <div>LUX JERSEY</div>
+                                            <span class="display-block">BLACK/BLACK</span>
+                                        </h5>
+                                        <h6 class="frequently-bought-price">£44.99</h6>
+                                    </div>
                                 </div>
+                                <a class="btn primary-btn frequently-bought-btn" href="javascript:void(0);">
+                                    <span>ADD TO BASKET</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="frequently-bought-slide splide__slide">
+                            <div class="frequently-bought-item">
+                                <div class="frequently-bought-wrapper">
+                                    <img class="img-cover frequently-bought-img" src="assets/images/sections/frequently-bought-section/frequently-bought-img-03.png" alt="frequently-bought-img">
+                                    <div class="frequently-bought-content">
+                                        <h5 class="font-15 font-black title">FOX RACING V1
+                                            <div>PLAIC HELMET</div>
+                                            <span class="display-block">WHITE</span>
+                                        </h5>
+                                        <h6 class="frequently-bought-price">£44.99</h6>
+                                    </div>
+                                </div>
+                                <a class="btn primary-btn frequently-bought-btn" href="javascript:void(0);">
+                                    <span>ADD TO BASKET</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="frequently-bought-slide splide__slide">
+                            <div class="frequently-bought-item">
+                                <div class="frequently-bought-wrapper">
+                                    <img class="img-cover frequently-bought-img" src="assets/images/sections/frequently-bought-section/frequently-bought-img-01.png" alt="frequently-bought-img">
+                                    <div class="frequently-bought-content">
+                                        <h5 class="font-15 font-black title">OILFILTER SERVICEKIT
+                                            <span class="display-block">690 12-14</span>
+                                        </h5>
+                                        <h6 class="frequently-bought-price">£52.50</h6>
+                                    </div>
+                                </div>
+                                <a class="btn primary-btn frequently-bought-btn" href="javascript:void(0);">
+                                    <span>ADD TO BASKET</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="frequently-bought-slide splide__slide">
+                            <div class="frequently-bought-item">
+                                <div class="frequently-bought-wrapper">
+                                    <img class="img-cover frequently-bought-img" src="assets/images/sections/frequently-bought-section/frequently-bought-img-02.png" alt="frequently-bought-img">
+                                    <div class="frequently-bought-content">
+                                        <h5 class="font-15 font-black title">FOX RACING 180
+                                            <div>LUX JERSEY</div>
+                                            <span class="display-block">BLACK/BLACK</span>
+                                        </h5>
+                                        <h6 class="frequently-bought-price">£44.99</h6>
+                                    </div>
+                                </div>
+                                <a class="btn primary-btn frequently-bought-btn" href="javascript:void(0);">
+                                    <span>ADD TO BASKET</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="frequently-bought-slide splide__slide">
+                            <div class="frequently-bought-item">
+                                <div class="frequently-bought-wrapper">
+                                    <img class="img-cover frequently-bought-img" src="assets/images/sections/frequently-bought-section/frequently-bought-img-03.png" alt="frequently-bought-img">
+                                    <div class="frequently-bought-content">
+                                        <h5 class="font-15 font-black title">FOX RACING V1
+                                            <div>PLAIC HELMET</div>
+                                            <span class="display-block">WHITE</span>
+                                        </h5>
+                                        <h6 class="frequently-bought-price">£44.99</h6>
+                                    </div>
+                                </div>
+                                <a class="btn primary-btn frequently-bought-btn" href="javascript:void(0);">
+                                    <span>ADD TO BASKET</span>
+                                </a>
                             </div>
                         </li>
                     </ul>
