remove active class in mini basket sidebar

--- a/productOpen.html
+++ b/productOpen.html
@@ -667,7 +667,7 @@
                         <a class="btn primary-btn product-overview-basket" data-sidebar="mini-basket" href="javascript:void(0);">
                             <span>add to basket</span>
                         </a>
-                        <div class="sidebar active" id="mini-basket">
+                        <div class="sidebar" id="mini-basket">
                             <div class="sidebar-wrapper scroll-bar mini-basket-sidebar">
                                 <div class="mini-basket-wrapper">
                                     <div class="mini-basket-title-wrapper">
