--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>marsh-mx</title>
+
     <!----- Favicon ----->
     <link rel="icon" href="assets/images/icons/favicon.png" type="image/png">
 
@@ -217,7 +218,9 @@
                                     <img class="img-cover" src="assets/images/sections/header/mega-menu-blog-img.png" alt="mega-menu-img">
                                     <div class="mega-menu-img-content">
                                         <h2 class="font-white mega-menu-img-content-title">LATEST ARRIVALS</h2>
-                                        <a class="btn secondary-btn" href="javascript:void(0);">EXPLORE BIKES</a>
+                                        <a class="btn secondary-btn" href="javascript:void(0);">
+                                            <span>EXPLORE BIKES</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
