--- a/productCategory.html
+++ b/productCategory.html
@@ -217,7 +217,9 @@
                                     <img class="img-cover" src="assets/images/sections/header/mega-menu-blog-img.png" alt="mega-menu-img">
                                     <div class="mega-menu-img-content">
                                         <h2 class="font-white mega-menu-img-content-title">LATEST ARRIVALS</h2>
-                                        <a class="btn secondary-btn" href="javascript:void(0);">EXPLORE BIKES</a>
+                                        <a class="btn secondary-btn" href="javascript:void(0);">
+                                            <span>EXPLORE BIKES</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
