--- a/productOpen.html
+++ b/productOpen.html
@@ -224,7 +224,9 @@
                                     <img class="img-cover" src="assets/images/sections/header/mega-menu-blog-img.png" alt="mega-menu-img">
                                     <div class="mega-menu-img-content">
                                         <h2 class="font-white mega-menu-img-content-title">LATEST ARRIVALS</h2>
-                                        <a class="btn secondary-btn" href="javascript:void(0);">EXPLORE BIKES</a>
+                                        <a class="btn secondary-btn" href="javascript:void(0);">
+                                            <span>EXPLORE BIKES</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -901,7 +903,7 @@
                             <div class="bike-value-author-content">
                                 <input class="text-field-input part-ex-input bike-value-input" type="text" placeholder="Model Name…" required>
                                 <select class="cursor-pointer select-box part-ex-input bike-value-year-select bike-value-input" required>
-                                    <option value="year">Year…</option>
+                                    <option value="year" selected>Year…</option>
                                     <option value="year-01">2022</option>
                                     <option value="year-02">2023</option>
                                     <option value="year-03">2024</option>
@@ -955,7 +957,7 @@
                                 <div class="bike-value-input-wrapper">
                                     <select class="cursor-pointer select-box part-ex-price-menu part-ex-input" required>
                                         <option value="price">Desired price</option>
-                                        <option value="price-01">£8,729.00</option>
+                                        <option value="price-01" selected>£8,729.00</option>
                                         <option value="price-02">£8,779.00</option>
                                         <option value="price-03">£8,759.00</option>
                                         <option value="price-04">£8,749.00</option>
